--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js'></script>
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js'></script>
 <script type='text/javascript' src='./sjcl.js'></script>
 <script type='text/javascript' src='./papaparse.min.js'></script>
 <script type='text/javascript'>
